feature: rewrite to gin and redesign routes
