# service-auth/handlers/ping.go
@@ -1,8 +1,8 @@
 package handlers
 
 import (
+	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
-	"github.com/labstack/echo/v4"
 	"net/http"
 	"time"
 )
@@ -15,8 +15,8 @@ type Ping struct {
 
 type PingResponse struct {
 	// API version
-	Api  string `json:"api"`
-	Ping Ping   `json:"ping"`
+	Version string `json:"v"`
+	Ping    Ping   `json:"ping"`
 }
 
 // PingCheck godoc
@@ -25,16 +25,16 @@ type PingResponse struct {
 // @Accept  json
 // @Produce  json
 // @Success 200 {object} handlers.PingResponse
-// @Router /api/ping [get]
-func (h Handler) PingHandler(c echo.Context) error {
+// @Router /_/ping [get]
+func (h Handler) PingHandler(c *gin.Context) {
 	ping := Ping{
 		ID:          uuid.New().String(),
 		ServiceName: "service-auth",
 		Time:        time.Now().Local(),
 	}
 
-	return c.JSON(http.StatusOK, PingResponse{
-		Api:  "v1",
-		Ping: ping,
+	c.JSON(http.StatusOK, PingResponse{
+		Version: "1",
+		Ping:    ping,
 	})
 }
